# XAUUSD

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py  run_all.py
backend/api/dependencies/: __init__.py  container.py
backend/api/http/: __init__.py  app.py
backend/api/schemas/: alerts.py  dashboard.py  health.py  indicators.py  market.py  risk.py  scoring.py  structure.py
backend/application/dto/: alerts.py  analysis_context.py  dashboard.py  indicators.py  market_data.py  risk.py  scoring.py  structure.py
backend/application/ports/: alert_formatter.py  alert_publisher.py  indicator_engine.py  market_data.py  risk_engine.py  scoring_engine.py  structure_engine.py
backend/application/services/: alert_service.py  analysis_pipeline_service.py  analysis_service.py  dashboard_service.py  indicator_service.py  market_data_service.py  (+5 more)
backend/telegram_bot/: __init__.py  runner.py
config/: assets.yaml  scoring.yaml
docker/: backend.Dockerfile
docs/: phase-1-architecture.md
tests/: test_alert_formatter.py  test_alert_route.py  test_alert_service.py  test_analysis_pipeline_service.py  test_asset_loader.py  test_dashboard_route.py  test_dashboard_service.py  test_health.py  test_indicator_engine.py  test_indicator_overview.py  test_indicator_service.py  test_market_overview.py  test_risk_engine.py  test_risk_route.py  test_risk_service.py  test_scoring_engine.py  test_scoring_route.py  test_scoring_service.py  test_structure_engine.py  test_structure_route.py  test_structure_service.py  test_telegram_runner.py
trading_signal_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+46 files in other folders)
